--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div><canvas id="ahorcado" height="180px" width="350px"></canvas>
     </div>
     <script type="text/javascript" src="canvas.js"></script>
-    <script type="text/javascript" src="ahorcado2.js"></script>
+    <script type="text/javascript" src="ahorcado.js"></script>
 </body>
 <footer>
     <div id="footer-info">Copyright © 2022 - Diseño Web realizado por <a class="link" href="https://www.linkedin.com/in/edibertocoronel/" target="_blank" rel="nofollow, noopener" >Ediberto Coronel</a> &nbsp <a>Challeger Oracle Logica de Programacion  <a class="link" href="https://app.aluracursos.com/" target="_blank" rel="nofollow, noopener" title="Alura LATAM">Alura LATAM</a></a>
