detalles del html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <input type="text" placeholder="Ingresa Letra" id="veri" size="1">
         <button type="button" onclick="verificar()" id="btnveri">VERIFICAR</button>
     </div>
+    <div id="historia">
+        <label id="texto" class="item"><b>Intentos</b></label>
+        <input type="text" class="tex" placeholder="Numero" id="inputNum" size="1">
+        <label id="texto" class="item"><b>Letra Usada</b></label>
+        <input type="text" class="tex" placeholder="Letra" id="inputText" size="1">
+    </div>
     <div><canvas id="ahorcado" height="180px" width="350px"></canvas>
     </div>
     <script type="text/javascript" src="canvas.js"></script>
