mejoras del span

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div id="mensaje"><span id="resultado"></span>
     </div>
     <div id="container">
-        <p id="comenzar"><b>Ingresa una Palabra</b></p>
+        <label id="comenzar"><b>Ingresa una Palabra</b></label>
         <input type="text" placeholder="Ingresa Palabra" id="veripalabra" size="10">
         <button type="button" onclick="enviarTexto()" id="btpalabra">INGRESA</button>
     </div>
     <div id="container">
-        <p id="comenzar"><b>Escoge una Letra</b></p>
+        <label id="comenzar"><b>Escoge una Letra</b></label>
         <input type="text" placeholder="Ingresa Letra" id="veri" size="1">
         <button type="button" onclick="verificar()" id="btnveri">VERIFICAR</button>
     </div>
